Fixed overflow-x on mobile-phones

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -420,6 +420,7 @@
 .about {
 	position: relative;
 	z-index: 2;
+	overflow-x: hidden;
 	padding: 5vw;
 	background-color: #FFFFFF;
 	scroll-margin: 80px;
